--- a/SocialMegazord2.0/SocialMegazord2.0/SocialMegazord2.0.csproj
+++ b/SocialMegazord2.0/SocialMegazord2.0/SocialMegazord2.0.csproj
@@ -201,6 +201,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PostController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
