--- a/SocialMegazord2.0/SocialMegazord2.0/SocialMegazord2.0.csproj
+++ b/SocialMegazord2.0/SocialMegazord2.0/SocialMegazord2.0.csproj
@@ -201,8 +201,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PostController.cs" />
-    <Compile Include="Controllers\ProfileController.cs" />
-    <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Controllers\Admin\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -285,15 +283,15 @@
     <Content Include="Views\Event\Options.cshtml" />
     <Content Include="Views\Manage\UpdateInterests.cshtml" />
     <Content Include="Views\Manage\ChangeUserName.cshtml" />
-    <Content Include="Views\Admin\EditUsers.cshtml" />
-    <Content Include="Views\Admin\EditEvents.cshtml" />
-    <Content Include="Views\Admin\EditPosts.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\User\EditEvents.cshtml" />
+    <Content Include="Views\User\EditPosts.cshtml" />
+    <Content Include="Views\User\EditUsers.cshtml" />
+    <Content Include="Views\Post\Options.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
