--- a/SocialMegazord2.0/SocialMegazord2.0/SocialMegazord2.0.csproj
+++ b/SocialMegazord2.0/SocialMegazord2.0/SocialMegazord2.0.csproj
@@ -265,12 +265,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
@@ -289,6 +285,7 @@
     <Content Include="Views\User\EditPosts.cshtml" />
     <Content Include="Views\User\EditUsers.cshtml" />
     <Content Include="Views\Post\Options.cshtml" />
+    <Content Include="Views\Post\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
